<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">testvector</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="voice_limit">静音</string>
    <string name="voice_limite">静音</string>
    <string name="wifi">WIFI</string>
    <string name="ap">个人热点</string>
    <string name="bluetooth">蓝牙</string>
    <string name="button_switch_def_text">点击开关</string>
    <string name="fm">连接车载音响</string>
    <string name="mobile_data">移动数据</string>

</resources>